TestSuite/Verification/Error/Serial/Syntax/Control-Statement/ForEachLoopTest.par
ForEachLoopTest{

seq main() : Int {
    var [Int] a = init_List([10])
    for var Int x in a {
        x = 1
    }
    
return 0 
}}